Fix miss alignment of footer when private chat is open

--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -4903,7 +4903,7 @@ span#usertab_text {
   margin-left: 0.875rem;
   line-height: 1.125rem;
   font-size: 0.9375rem;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 @keyframes pulse {
